# prodigy

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yaml
cmake/: BoostTestTarget.cmake  CodeCoverage.cmake  CompileCommands.cmake  Sanitizers.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  prodigy.cpp
src/base/: CMakeLists.txt  cache_line_size.h  enum_map.h  fill_array.h  ply.h  string_utils.cpp  string_utils.h  uniform_distribution.h
src/base/tests/: CMakeLists.txt  fill_array.cpp  (+1 more)
src/board/: CMakeLists.txt  bitboard.cpp  bitboard.h  board.h  castling_rights.cpp  castling_rights.h  color.cpp  color.h  color_traits.h  coordinate.cpp  coordinate.h  coordinate_map.h  direction.h  file.cpp  file.h  move.cpp  move.h  piece_map.h  piece_type.cpp  piece_type.h  position.cpp  position.h  rank.cpp  rank.h  starting_position_fen.h
src/eval/: score.h
src/movegen/: CMakeLists.txt  magic_bitboards.cpp  magic_bitboards.h  move_generator.cpp  move_generator.h  move_list.h  perft.cpp  perft.h  tables.cpp  tables.h
src/search/: CMakeLists.txt  controller.cpp  controller.h  node_type.cpp  node_type.h  random_searcher.cpp  random_searcher.h  searcher.h
src/transposition_table/: CMakeLists.txt  bucket.cpp  bucket.h  entry.cpp  entry.h  key.h  transposition_table.cpp  transposition_table.h  value.cpp  value.h
src/uci/: CMakeLists.txt  event_loop.cpp  event_loop.h  handler.cpp  handler.h  messages.cpp  messages.h  stdin_handler.cpp  stdin_handler.h
src/zobrist/: CMakeLists.txt  hash.h  randoms.cpp  randoms.h
tools/: build
(+26 files in other folders)
